--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-07-26  Funda Wang  <fundawang@gmail.com>
+
+	* zh_CN.po: Updated Simplified Chinese translation
+
 2007-07-25  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
