Updated Occitan translation
svn path=/trunk/; revision=13031

--- a/po/oc.po
+++ b/po/oc.po
@@ -1,21 +1,21 @@
 # Occitan translation of nautilus.
 # Copyright (C) 2007 Free Software Foundation, Inc.
 # This file is distributed under the same license as the nautilus package.
-# 
 # Yannig MARCHEGAY (Kokoyaya) <yannig@marchegay.org>, 2007.
-#
+# 
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: nautilus 2.19.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-04-15 20:12+0200\n"
-"PO-Revision-Date: 2007-03-13 22:40+0100\n"
+"PO-Revision-Date: 2007-06-26 11:41+0200\n"
 "Last-Translator: Yannig MARCHEGAY (Kokoyaya) <yannig@marchegay.org>\n"
 "Language-Team: Occitan\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n>1;\n"
+"Plural-Forms: nplurals=2; plural=n>1;"
 
 #: ../data/browser.xml.h:1
 msgid "Apparition"
@@ -839,7 +839,7 @@ msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:113
 msgid "Whether to show hidden files"
-msgstr "Indica se cal mostrar los fichièrs amagats"
+msgstr "Indica se cal visualizar los fichièrs amagats"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:114
 msgid "Width of the side pane"
@@ -1896,23 +1896,17 @@ msgstr ""
 #: ../src/file-manager/fm-directory-view.c:2251
 #, c-format
 msgid "%u item"
-msgid_plural "%u items"
-msgstr[0] ""
-msgstr[1] ""
+msgstr ""
 
 #: ../libnautilus-private/nautilus-file.c:4343
 #, c-format
 msgid "%u folder"
-msgid_plural "%u folders"
-msgstr[0] ""
-msgstr[1] ""
+msgstr ""
 
 #: ../libnautilus-private/nautilus-file.c:4344
 #, c-format
 msgid "%u file"
-msgid_plural "%u files"
-msgstr[0] ""
-msgstr[1] ""
+msgstr ""
 
 #. FIXME: We should use GNOME_VFS_SIZE_FORMAT_STR instead of the explicit format here.
 #: ../libnautilus-private/nautilus-file.c:4422
@@ -2233,7 +2227,7 @@ msgstr "Dubertura de %s"
 #: ../src/nautilus-window-manage-views.c:1527
 #, c-format
 msgid "Couldn't display \"%s\"."
-msgstr "Impossible de mostrar %s."
+msgstr "Impossible de visualizar %s."
 
 #: ../libnautilus-private/nautilus-program-choosing.c:590
 #: ../libnautilus-private/nautilus-program-choosing.c:913
@@ -2362,7 +2356,7 @@ msgstr ""
 
 #: ../nautilus-folder-handler.desktop.in.in.h:1
 msgid "Open Folder"
-msgstr "Dubrir un repertòri"
+msgstr "Dobrir un repertòri"
 
 #: ../nautilus-home.desktop.in.in.h:1 ../src/file-manager/fm-tree-view.c:1394
 msgid "Home Folder"
@@ -2479,15 +2473,13 @@ msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:668
 msgid "Are you sure you want to open all files?"
-msgstr "Volètz dubrir totes los fichièrs ?"
+msgstr "Volètz dobrir totes los fichièrs ?"
 
 #: ../src/file-manager/fm-directory-view.c:669
 #: ../src/nautilus-location-bar.c:154
 #, c-format
 msgid "This will open %d separate window."
-msgid_plural "This will open %d separate windows."
-msgstr[0] ""
-msgstr[1] ""
+msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:1002
 #: ../src/file-manager/fm-tree-view.c:1140
@@ -2498,10 +2490,8 @@ msgstr ""
 #: ../src/file-manager/fm-directory-view.c:1006
 #, fuzzy, c-format
 msgid "Are you sure you want to permanently delete the %d selected item?"
-msgid_plural ""
 "Are you sure you want to permanently delete the %d selected items?"
-msgstr[0] "Volètz dubrir totes los fichièrs ?"
-msgstr[1] "Volètz dubrir totes los fichièrs ?"
+msgstr "Volètz dobrir totes los fichièrs ?"
 
 #: ../src/file-manager/fm-directory-view.c:1017
 #: ../src/file-manager/fm-tree-view.c:1149
@@ -2513,7 +2503,7 @@ msgstr ""
 #: ../src/nautilus-connect-server-dialog.c:401
 #: ../src/nautilus-location-dialog.c:115
 msgid "There was an error displaying help."
-msgstr "I a agut una error al moment de mostrar l'ajuda."
+msgstr "I a agut una error al moment de visualizar l'ajuda."
 
 #: ../src/file-manager/fm-directory-view.c:1188
 msgid "Select Pattern"
@@ -2548,24 +2538,18 @@ msgstr "\"%s\" seleccionat"
 #: ../src/file-manager/fm-directory-view.c:2185
 #, c-format
 msgid "%d folder selected"
-msgid_plural "%d folders selected"
-msgstr[0] ""
-msgstr[1] ""
+msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:2195
 #, c-format
 msgid " (containing %d item)"
-msgid_plural " (containing %d items)"
-msgstr[0] ""
-msgstr[1] ""
+msgstr ""
 
 #. translators: this is preceded with a string of form 'N folders' (N more than 1)
 #: ../src/file-manager/fm-directory-view.c:2206
 #, c-format
 msgid " (containing a total of %d item)"
-msgid_plural " (containing a total of %d items)"
-msgstr[0] ""
-msgstr[1] ""
+msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:2222
 #, c-format
@@ -2583,9 +2567,7 @@ msgstr[1] "%d element seleccionat (%s)"
 #: ../src/file-manager/fm-directory-view.c:2234
 #, c-format
 msgid "%d other item selected (%s)"
-msgid_plural "%d other items selected (%s)"
-msgstr[0] ""
-msgstr[1] ""
+msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:2255
 #, c-format
@@ -2659,11 +2641,9 @@ msgstr ""
 msgid ""
 "Are you sure you want to permanently delete the %d selected item from the "
 "trash?"
-msgid_plural ""
 "Are you sure you want to permanently delete the %d selected items from the "
 "trash?"
-msgstr[0] "Volètz dubrir totes los fichièrs ?"
-msgstr[1] "Volètz dubrir totes los fichièrs ?"
+msgstr "Volètz dobrir totes los fichièrs ?"
 
 #: ../src/file-manager/fm-directory-view.c:3888
 msgid "If you delete an item, it will be permanently lost."
@@ -2672,14 +2652,12 @@ msgstr ""
 #: ../src/file-manager/fm-directory-view.c:4478
 #, c-format
 msgid "Open with \"%s\""
-msgstr "Dubrir amb \"%s\""
+msgstr "Dobrir amb \"%s\""
 
 #: ../src/file-manager/fm-directory-view.c:4479
 #, c-format
 msgid "Use \"%s\" to open the selected item"
-msgid_plural "Use \"%s\" to open the selected items"
-msgstr[0] ""
-msgstr[1] ""
+msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:4571
 #, c-format
@@ -2706,7 +2684,7 @@ msgstr "_Executar"
 #: ../src/file-manager/fm-directory-view.c:4979
 #, c-format
 msgid "Cannot open %s"
-msgstr "Impossible de dubrir %s"
+msgstr "Impossible de dobrir %s"
 
 #: ../src/file-manager/fm-directory-view.c:4982
 #, c-format
@@ -2778,18 +2756,14 @@ msgstr ""
 #: ../src/file-manager/fm-directory-view.c:6042
 #, c-format
 msgid "The %d selected item will be moved if you select the Paste command"
-msgid_plural ""
 "The %d selected items will be moved if you select the Paste command"
-msgstr[0] ""
-msgstr[1] ""
+msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:6049
 #, c-format
 msgid "The %d selected item will be copied if you select the Paste command"
-msgid_plural ""
 "The %d selected items will be copied if you select the Paste command"
-msgstr[0] ""
-msgstr[1] ""
+msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:6143
 #: ../src/file-manager/fm-tree-view.c:1044
@@ -2816,7 +2790,7 @@ msgstr "Crear un _document"
 #. name, stock id, label
 #: ../src/file-manager/fm-directory-view.c:6818
 msgid "Open Wit_h"
-msgstr "Dubrir _amb"
+msgstr "Dobrir _amb"
 
 #. name, stock id, label
 #: ../src/file-manager/fm-directory-view.c:6819
@@ -2895,7 +2869,7 @@ msgstr ""
 #: ../src/file-manager/fm-directory-view.c:6859
 #: ../src/file-manager/fm-directory-view.c:6863
 msgid "Open with Other _Application..."
-msgstr "Dubrir amb una autra _aplicacion..."
+msgstr "Dobrir amb una autra _aplicacion..."
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6860
@@ -2975,9 +2949,7 @@ msgstr ""
 #: ../src/file-manager/fm-directory-view.c:6905
 #: ../src/file-manager/fm-directory-view.c:7799
 msgid "Ma_ke Link"
-msgid_plural "Ma_ke Links"
-msgstr[0] ""
-msgstr[1] ""
+msgstr ""
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6906
@@ -3193,9 +3165,7 @@ msgstr "Dobrir dins una fenèstra nòva"
 #: ../src/file-manager/fm-directory-view.c:7554
 #: ../src/file-manager/fm-directory-view.c:7743
 msgid "_Browse Folder"
-msgid_plural "_Browse Folders"
-msgstr[0] ""
-msgstr[1] ""
+msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:7579
 #: ../src/file-manager/fm-directory-view.c:7763
@@ -3219,8 +3189,8 @@ msgstr "_Dubrir amb \"%s\""
 #, fuzzy, c-format
 msgid "Open in %d New Window"
 msgid_plural "Open in %d New Windows"
-msgstr[0] "Dubrir dins %d fenèstra nòva"
-msgstr[1] "Dubrir dins %d fenèstra nòva"
+msgstr[0] "Dobrir dins %d fenèstra nòva"
+msgstr[1] "Dobrir dins %d fenèstra nòva"
 
 #: ../src/file-manager/fm-directory-view.c:7764
 msgid "Delete all selected items permanently"
@@ -3709,9 +3679,7 @@ msgstr ""
 #: ../src/file-manager/fm-properties-window.c:2289
 #, c-format
 msgid "%d item, with size %s"
-msgid_plural "%d items, totalling %s"
-msgstr[0] ""
-msgstr[1] ""
+msgstr ""
 
 #: ../src/file-manager/fm-properties-window.c:2298
 msgid "(some contents unreadable)"
@@ -3972,7 +3940,7 @@ msgstr ""
 
 #: ../src/file-manager/fm-properties-window.c:4443
 msgid "Open With"
-msgstr "Dubrir amb"
+msgstr "Dobrir amb"
 
 #: ../src/file-manager/fm-properties-window.c:4783
 msgid "Creating Properties window."
@@ -4129,7 +4097,7 @@ msgid ""
 "There was an error displaying help: \n"
 "%s"
 msgstr ""
-"I a agut una error al moment de mostrar l'ajuda : \n"
+"I a agut una error al moment de visualizar l'ajuda : \n"
 "%s"
 
 #: ../src/nautilus-bookmarks-window.c:192
@@ -4710,13 +4678,11 @@ msgstr ""
 #: ../src/nautilus-location-bar.c:150
 #, c-format
 msgid "Do you want to view %d location?"
-msgid_plural "Do you want to view %d locations?"
-msgstr[0] ""
-msgstr[1] ""
+msgstr ""
 
 #: ../src/nautilus-location-dialog.c:156
 msgid "Open Location"
-msgstr "Dubrir un emplaçament"
+msgstr "Dobrir un emplaçament"
 
 #: ../src/nautilus-location-dialog.c:167
 msgid "_Location:"
@@ -4846,12 +4812,12 @@ msgstr "_Favorits"
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:428
 msgid "Open New _Window"
-msgstr "Dubrir dins una fenèstra _nòva"
+msgstr "Dobrir dins una fenèstra _nòva"
 
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:429
 msgid "Open another Nautilus window for the displayed location"
-msgstr "Dubrir una novèla fenèstra de Nautilus pel emplaçament visualizat"
+msgstr "Dobrir una novèla fenèstra de Nautilus pel emplaçament visualizat"
 
 #: ../src/nautilus-navigation-window-menus.c:431
 msgid "Close _All Windows"
@@ -5336,7 +5302,7 @@ msgstr ""
 
 #: ../src/nautilus-spatial-window.c:857
 msgid "Clos_e All Folders"
-msgstr "_Barrar totes los repertòris"
+msgstr "_Tampar totes los repertòris"
 
 #. name, stock id, label
 #: ../src/nautilus-spatial-window.c:858
@@ -5408,7 +5374,7 @@ msgstr ""
 #: ../src/nautilus-window-manage-views.c:1546
 #, c-format
 msgid "Nautilus cannot display \"%s\"."
-msgstr "Nautilus pòt pas mostrar \"%s\"."
+msgstr "Nautilus pòt pas visualizar \"%s\"."
 
 #: ../src/nautilus-window-manage-views.c:1548
 msgid "Please select another viewer and try again."
@@ -5485,7 +5451,7 @@ msgstr "_Ajuda"
 #. name, stock id
 #: ../src/nautilus-window-menus.c:593
 msgid "_Close"
-msgstr "_Barrar"
+msgstr "_Tampar"
 
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:594
@@ -5521,7 +5487,7 @@ msgstr ""
 
 #: ../src/nautilus-window-menus.c:607
 msgid "Open _Parent"
-msgstr "Dubrir lo repertòri _parent"
+msgstr "Dobrir lo repertòri _parent"
 
 #. name, stock id, label
 #: ../src/nautilus-window-menus.c:608
