Estonian translation update by Ivar Smolin.
2007-07-30  Priit Laes  <plaes@svn.gnome.org>

	* et.po: Estonian translation update by Ivar Smolin.

svn path=/trunk/; revision=13032

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-07-30  Priit Laes  <plaes@svn.gnome.org>
+
+	* et.po: Estonian translation update by Ivar Smolin.
+
 2007-07-26  Funda Wang  <fundawang@gmail.com>
 
 	* zh_CN.po: Updated Simplified Chinese translation
