--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-07-30  Martin Wehner  <martin.wehner@gmail.com>
+
+	* libnautilus-private/nautilus-search-engine-simple.c:
+	(search_visit_func): Don't try to lowercase non-unicode
+	filenames with g_utf8_strdown. Fixes #454799.
+	Patch from Jan de Groot  <jan@jgc.homeip.net>
+
 === nautilus 2.18.3 ===
 
 2007-07-02  Martin Wehner  <martin.wehner@gmail.com>
