--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-07-31  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/nautilus-window-toolbars.c:
+	(nautilus_navigation_window_load_extension_toolbar_items):
+	Don't use the same name for the extensions menu action group
+	and the extensions toolbar action group. (#461792)
+	Patch from Christian Persch <chpe@gnome.org>
+
 2007-07-30  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-window.c: (real_load_view_as_menu):
