--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+Major changes in 2.19.6 are:
+* Fixes to UI manager usage
+* Better string ellipsation
+* Consistent focus behaviour for toolbar buttons
+* Support for XMP image metadata
+* Improved keyboard handling in connect to server dialog
+* I18n fixes and string clarifications
+* Add more tooltips and use new gtk+ tootips API
+* Better handling of unreadable directories during search
+* Fix various crashes
+* Translation updates
+
 Major changes in 2.19.5 are:
 * Build fixes
 * Fix leaks
