--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+=== nautilus 2.19.6 ===
+
+2007-07-31  Martin Wehner  <martin.wehner@gmail.com>
+
+	* NEWS:
+	Update for release
+
 2007-07-31  Martin Wehner  <martin.wehner@gmail.com>
 
 	* configure.in: Revert dependency on libSM 1.0.2
