Remove excess lines from uninstalled.pc file. (#462496) Patch from Damien
2007-08-02  Martin Wehner  <martin.wehner@gmail.com>

	* libnautilus-extension/libnautilus-extension-uninstalled.pc.in:
	Remove excess lines from uninstalled.pc file. (#462496)
	Patch from Damien Carbery  <damien.carbery@sun.com>

svn path=/trunk/; revision=13046

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-08-02  Martin Wehner  <martin.wehner@gmail.com>
+
+	* libnautilus-extension/libnautilus-extension-uninstalled.pc.in:
+	Remove excess lines from uninstalled.pc file. (#462496)
+	Patch from Damien Carbery  <damien.carbery@sun.com>
+
 2007-08-01  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/Makefile.am:
