--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-03  Ihar Hrachyshka <ihar.hrachyshka@gmail.com>
+
+	* be@latin.po: Updated Belarusian Latin translation.
+
 2007-08-03  Ani Peter <peter.ani@gmail.com>
 
 	* ml.po: Updated Malayalam Translation
