Added debug message when GnomeVFS service is not available closes bgo
2007-08-04  Luis Medinas  <lmedinas@svn.gnome.org>

        * src/nautilus-window-manage-views.c:
        (display_view_selection_failure):
        Added debug message when GnomeVFS service is not available
        closes bgo #168533. Patch from Luis Medinas <lmedinas@svn.gnome.org>.


svn path=/trunk/; revision=13053

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-08-04  Luis Medinas  <lmedinas@svn.gnome.org>
+
+	* src/nautilus-window-manage-views.c:
+	(display_view_selection_failure):
+	Added debug message when GnomeVFS service is not available
+	closes bgo #168533. Patch from Luis Medinas <lmedinas@svn.gnome.org>.
+
 2007-08-02  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-extension/libnautilus-extension-uninstalled.pc.in:
