Updated Japanese translation.
2007-08-04  Takeshi AIHANA <takeshi.aihana@gmail.com>

        * ja.po: Updated Japanese translation.

svn path=/trunk/; revision=13054

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-04  Takeshi AIHANA <takeshi.aihana@gmail.com>
+
+	* ja.po: Updated Japanese translation.
+
 2007-08-03  Ihar Hrachyshka <ihar.hrachyshka@gmail.com>
 
 	* be@latin.po: Updated Belarusian Latin translation.
