Brazilian Portuguese translation updated and reviewed by Og Maciel
2007-08-05  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>

	* pt_BR.po: Brazilian Portuguese translation updated and reviewed by
	Og Maciel <ogmaciel@gnome.org> and me.

svn path=/trunk/; revision=13057

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-08-05  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>
+
+	* pt_BR.po: Brazilian Portuguese translation updated and reviewed by
+	Og Maciel <ogmaciel@gnome.org> and me.
+
 2007-08-05  Jorge Gonzalez <jorgegonz@svn.gnome.org>
 
 	* es.po: Updated Spanish translation 
