s/_Conteúdo/S_umário; see bug #461308.
2007-08-05  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>

        * pt_BR.po: s/_Conteúdo/S_umário; see bug #461308.

svn path=/trunk/; revision=13059

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -5961,7 +5961,7 @@ msgstr "Recarrega a localização atual"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:617
-msgid "_Contents"
+msgid "S_umário"
 msgstr "_Conteúdo"
 
 #. label, accelerator
