Same as my last commit, but this time done right.
svn path=/trunk/; revision=13060

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-08-04 20:21-0300\n"
+"POT-Creation-Date: 2007-08-05 17:46-0300\n"
 "PO-Revision-Date: 2007-08-05 08:18-0300\n"
 "Last-Translator: Og Maciel <ogmaciel@gnome.org>\n"
 "Language-Team: Brazilian Portuguese <gnome-l10n-br@listas.cipsga.org.br>\n"
@@ -540,9 +540,9 @@ msgid ""
 "file immediately and in-place, instead of moving it to the trash. This "
 "feature can be dangerous, so use caution."
 msgstr ""
-"Se verdadeiro, o Nautilus apresentará um comando que permite excluir arquivos "
-"sem antes movê-los para a lixeira. Esta opção pode ser perigosa, use com "
-"cuidado."
+"Se verdadeiro, o Nautilus apresentará um comando que permite excluir "
+"arquivos sem antes movê-los para a lixeira. Esta opção pode ser perigosa, "
+"use com cuidado."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:45
 msgid ""
@@ -788,10 +788,9 @@ msgid ""
 msgstr ""
 "Perda de desempenho para quando mostrar uma visualização de arquivos de "
 "texto no ícone do arquivo. Se definido como \"always\", então sempre mostra "
-"visualização, mesmo se o arquivo estiver em um servidor remoto. Se "
-"definido como \"local_only\", mostra previsões apenas para sistemas de "
-"arquivo locais. Se definido como \"never\", então nunca cria a "
-"visualização."
+"visualização, mesmo se o arquivo estiver em um servidor remoto. Se definido "
+"como \"local_only\", mostra previsões apenas para sistemas de arquivo "
+"locais. Se definido como \"never\", então nunca cria a visualização."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:86
 msgid ""
@@ -959,8 +958,7 @@ msgstr "Se um fundo personalizado foi definido para o painel lateral."
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:111
 msgid "Whether to ask for confirmation when deleting files, or emptying Trash"
 msgstr ""
-"Pedir ou não confirmação antes de apagar arquivos, ou movê-los para a "
-"Lixeira"
+"Pedir ou não confirmação antes de apagar arquivos, ou movê-los para a Lixeira"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:112
 msgid "Whether to enable immediate deletion"
@@ -5961,8 +5959,8 @@ msgstr "Recarrega a localização atual"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:617
-msgid "S_umário"
-msgstr "_Conteúdo"
+msgid "_Contents"
+msgstr "S_umário"
 
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:618
