--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-07  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Reinout van Schouwen.
+
 2007-08-06  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
