--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-08  I. Felix <ifelix@svn.gnome.org>
+
+	* ta.po:  Tamil Translation updated by Tirumurthi Vasudevan
+
 2007-08-08  Artur Flinta  <aflinta@svn.gnome.org>
 
 	* pl.po: Updated Polish translation by GNOME PL Team.
