--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-09  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Updated translation from Espen Stefansen.
+
 2007-08-08  Ankit Patel  <ankit644@yahoo.com>
 
 	* gu.po: Updated Gujarati Translation.
