--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-13  Ilkka Tuohela  <hile@iki.fi>
+
+	* fi.po: Updated Finnish translation.
+
 2007-08-12  Hendrik Richter  <hendrikr@gnome.org>
 
 	* de.po: Updated German translation.
