Replace references to "sidebar" with "side pane". (#131285) Patch from
2007-08-13  Martin Wehner  <martin.wehner@gmail.com>

	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	* src/nautilus-navigation-window-menus.c:
	Replace references to "sidebar" with "side pane". (#131285)
	Patch from Reinout van Schouwen  <reinouts@gnome.org>

svn path=/trunk/; revision=13072

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-08-13  Martin Wehner  <martin.wehner@gmail.com>
+
+	* libnautilus-private/apps_nautilus_preferences.schemas.in:
+	* src/nautilus-navigation-window-menus.c:
+	Replace references to "sidebar" with "side pane". (#131285)
+	Patch from Reinout van Schouwen  <reinouts@gnome.org>
+
 2007-08-04  Luis Medinas  <lmedinas@svn.gnome.org>
 
 	* src/nautilus-window-manage-views.c:
