--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+=== nautilus 2.19.90 ===
+
+2007-08-14  Martin Wehner  <martin.wehner@gmail.com>
+
+	* NEWS:
+	Update for release
+
 2007-08-13  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/apps_nautilus_preferences.schemas.in:
