--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Major changes in 2.19.90 are:
+* Auto-size list view filename column again
+* New message for service unavailable error
+* UI terminology consistency fix
+* Build fix
+
 Major changes in 2.19.6 are:
 * Fixes to UI manager usage
 * Better string ellipsation
