--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-08-14  Martin Wehner  <martin.wehner@gmail.com>
+
+	* configure.in:
+	Post release version bump
+
 === nautilus 2.19.90 ===
 
 2007-08-14  Martin Wehner  <martin.wehner@gmail.com>
