--- a/po/th.po
+++ b/po/th.po
@@ -8,10 +8,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: th\n"
+"Project-Id-Version: nautilus 2.19.91\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-08-09 22:09+0700\n"
-"PO-Revision-Date: 2007-08-09 22:10+0700\n"
+"POT-Creation-Date: 2007-08-14 13:08+0700\n"
+"PO-Revision-Date: 2007-08-14 13:11+0700\n"
 "Last-Translator: Theppitak Karoonboonyanan <thep@linux.thai.net>\n"
 "Language-Team: Thai <thai-l10n@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -670,7 +670,7 @@ msgid "Network servers icon name"
 msgstr "ชื่อไอคอนเซิร์ฟเวอร์ในเครือข่าย"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:68
-msgid "Only show folders in the tree sidebar"
+msgid "Only show folders in the tree side pane"
 msgstr "แสดงเฉพาะโฟลเดอร์ในแถบข้างต้นไม้"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:69
@@ -5117,7 +5117,7 @@ msgstr "แถบ_ข้าง"
 
 #. label, accelerator
 #: src/nautilus-navigation-window-menus.c:480
-msgid "Change the visibility of this window's sidebar"
+msgid "Change the visibility of this window's side pane"
 msgstr "แสดง/ซ่อน แถบข้างของหน้าต่างนี้"
 
 #. is_active
