Updated Spanish translation
svn path=/trunk/; revision=13077

--- a/po/es.po
+++ b/po/es.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus.HEAD.es\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-08-04 06:12+0100\n"
-"PO-Revision-Date: 2007-08-05 12:17+0200\n"
+"POT-Creation-Date: 2007-08-14 03:46+0100\n"
+"PO-Revision-Date: 2007-08-14 11:12+0200\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -754,8 +754,8 @@ msgid "Network servers icon name"
 msgstr "Nombre del icono de los servidores de red"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:68
-msgid "Only show folders in the tree sidebar"
-msgstr "Muestra sólo las carpetas en el árbol del panel lateral"
+msgid "Only show folders in the tree side pane"
+msgstr "Mostrar las carpetas sólo en el árbol del panel lateral"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:69
 msgid ""
@@ -5852,7 +5852,7 @@ msgstr "Panel _lateral"
 
 #. label, accelerator
 #: ../src/nautilus-navigation-window-menus.c:480
-msgid "Change the visibility of this window's sidebar"
+msgid "Change the visibility of this window's side pane"
 msgstr "Cambia la visibilidad del panel lateral de esta ventana"
 
 # libnautilus-private/nautilus-global-preferences.c:306
