--- a/po/sv.po
+++ b/po/sv.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-08-06 21:16+0200\n"
-"PO-Revision-Date: 2007-08-06 21:17+0100\n"
+"POT-Creation-Date: 2007-08-15 08:54+0200\n"
+"PO-Revision-Date: 2007-08-15 08:55+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "MIME-Version: 1.0\n"
@@ -574,7 +574,7 @@ msgid "Network servers icon name"
 msgstr "Ikonnamn för nätverksservrar"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:68
-msgid "Only show folders in the tree sidebar"
+msgid "Only show folders in the tree side pane"
 msgstr "Visa endast mappar i trädsidopanelen"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:69
@@ -4837,8 +4837,8 @@ msgstr "Sido_panel"
 
 #. label, accelerator
 #: ../src/nautilus-navigation-window-menus.c:480
-msgid "Change the visibility of this window's sidebar"
-msgstr "Ändra synligheten på detta fönsters sidopanel"
+msgid "Change the visibility of this window's side pane"
+msgstr "Ändra synligheten för detta fönsters sidopanel"
 
 #. is_active
 #. name, stock id
