intltool-update de
2007-08-15  Hendrik Richter  <hendrikr@gnome.org>

	* de.po: intltool-update de

svn path=/trunk/; revision=13081

--- a/po/de.po
+++ b/po/de.po
@@ -37,8 +37,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-08-12 12:58+0200\n"
-"PO-Revision-Date: 2007-08-12 13:11+0200\n"
+"POT-Creation-Date: 2007-08-15 12:20+0200\n"
+"PO-Revision-Date: 2007-08-15 12:20+0200\n"
 "Last-Translator: Hendrik Richter <hendrikr@gnome.org>\n"
 "Language-Team:  <de@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -755,7 +755,8 @@ msgid "Network servers icon name"
 msgstr "Name des Desktop-Symbols »Netzwerk-Server«"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:68
-msgid "Only show folders in the tree sidebar"
+#, fuzzy
+msgid "Only show folders in the tree side pane"
 msgstr "Ausschließlich Ordner in der Baum-Seitenleiste anzeigen"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:69
@@ -929,8 +930,8 @@ msgid ""
 "This name can be set if you want a custom name for the network servers icon "
 "on the desktop."
 msgstr ""
-"Dieser Wert legt einen benutzerdefinierten Namen für das Symbol "
-"»Netzwerk-Server« auf dem Desktop fest."
+"Dieser Wert legt einen benutzerdefinierten Namen für das Symbol »Netzwerk-"
+"Server« auf dem Desktop fest."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:98
 msgid ""
@@ -1011,8 +1012,8 @@ msgstr ""
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:111
 msgid "Whether to ask for confirmation when deleting files, or emptying Trash"
 msgstr ""
-"Legt fest, ob beim Löschen von Dateien oder beim Leeren des Mülls nachgefragt "
-"werden soll."
+"Legt fest, ob beim Löschen von Dateien oder beim Leeren des Mülls "
+"nachgefragt werden soll."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:112
 msgid "Whether to enable immediate deletion"
@@ -2921,8 +2922,7 @@ msgstr ""
 #, c-format
 msgid "The selected item could not be moved to the Trash"
 msgid_plural "The %d selected items could not be moved to the Trash"
-msgstr[0] ""
-"Das ausgewählte Objekt konnte nicht in den Müll verschoben werden"
+msgstr[0] "Das ausgewählte Objekt konnte nicht in den Müll verschoben werden"
 msgstr[1] ""
 "Die %d ausgewählten Objekte konnten nicht in den Müll verschoben werden"
 
@@ -5441,7 +5441,8 @@ msgstr "S_eitenleiste"
 
 #. label, accelerator
 #: ../src/nautilus-navigation-window-menus.c:480
-msgid "Change the visibility of this window's sidebar"
+#, fuzzy
+msgid "Change the visibility of this window's side pane"
 msgstr "Die Sichtbarkeit der Seitenleiste dieses Fensters ändern"
 
 #. is_active
