--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-15  Hendrik Richter  <hendrikr@gnome.org>
+
+	* de.po: intltool-update de
+
 2007-08-15  Žygimantas Beručka  <zygis@gnome.org>
 
 	* lt.po: Updated Lithuanian translation.
