Updated German translation.
2007-08-15  Hendrik Richter  <hendrikr@gnome.org>

	* de.po: Updated German translation.

svn path=/trunk/; revision=13082

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,9 @@
 2007-08-15  Hendrik Richter  <hendrikr@gnome.org>
 
+	* de.po: Updated German translation.
+
+2007-08-15  Hendrik Richter  <hendrikr@gnome.org>
+
 	* de.po: intltool-update de
 
 2007-08-15  Žygimantas Beručka  <zygis@gnome.org>
