--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-15  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Updated Norwegian bokmål translation.
+
 2007-08-15  Hendrik Richter  <hendrikr@gnome.org>
 
 	* de.po: Updated German translation.
