--- a/po/nb.po
+++ b/po/nb.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus 2.15.x\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-08-09 11:14+0200\n"
-"PO-Revision-Date: 2007-08-09 11:15+0200\n"
+"POT-Creation-Date: 2007-08-15 12:49+0200\n"
+"PO-Revision-Date: 2007-08-15 12:49+0200\n"
 "Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
@@ -513,7 +513,9 @@ msgstr ""
 msgid ""
 "If set to true, then Nautilus will ask for confirmation when you attempt to "
 "delete files, or empty the Trash."
-msgstr "Nautilus spør om bekreftelse ved sletting av filer eller tømming av papirkurven hvis satt til «true»."
+msgstr ""
+"Nautilus spør om bekreftelse ved sletting av filer eller tømming av "
+"papirkurven hvis satt til «true»."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:43
 msgid "If set to true, then Nautilus will draw the icons on the desktop."
@@ -691,7 +693,7 @@ msgid "Network servers icon name"
 msgstr "Ikonnavn for nettverkstjenere"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:68
-msgid "Only show folders in the tree sidebar"
+msgid "Only show folders in the tree side pane"
 msgstr "Vis kun mapper i treet i sidelinjen"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:69
@@ -931,7 +933,9 @@ msgstr "Om en tilpasset forvalgt bakgrunn er satt for sidepanelet."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:111
 msgid "Whether to ask for confirmation when deleting files, or emptying Trash"
-msgstr "Om det skal spørres om bekreftelse ved sletting av filer eller tømming av papirkurven"
+msgstr ""
+"Om det skal spørres om bekreftelse ved sletting av filer eller tømming av "
+"papirkurven"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:112
 msgid "Whether to enable immediate deletion"
@@ -5251,7 +5255,7 @@ msgstr "_Sidepanel"
 
 #. label, accelerator
 #: ../src/nautilus-navigation-window-menus.c:480
-msgid "Change the visibility of this window's sidebar"
+msgid "Change the visibility of this window's side pane"
 msgstr "Endre synligheten for dette vinduets sidelinje"
 
 #. is_active
