--- a/po/fi.po
+++ b/po/fi.po
@@ -24,7 +24,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus 1.1.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-08-13 19:47+0300\n"
+"POT-Creation-Date: 2007-08-15 17:53+0300\n"
 "PO-Revision-Date: 2007-02-12 18:54+0300\n"
 "Last-Translator: Ilkka Tuohela <hile@iki.fi>\n"
 "Language-Team: Finnish <gnome-fi-laatu@lists.sourceforge.net>\n"
@@ -703,7 +703,7 @@ msgid "Network servers icon name"
 msgstr "Verkkopalvelimien kuvakkeen nimi"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:68
-msgid "Only show folders in the tree sidebar"
+msgid "Only show folders in the tree side pane"
 msgstr "Näytä vain kansiot puusivupaneelissa"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:69
@@ -5281,8 +5281,8 @@ msgstr "_Sivupaneeli"
 
 #. label, accelerator
 #: ../src/nautilus-navigation-window-menus.c:480
-msgid "Change the visibility of this window's sidebar"
-msgstr "Näytä tai piilota tämän ikkunan sivupaneeli"
+msgid "Change the visibility of this window's side pane"
+msgstr "Näytä tai piilota ikkunan sivupaneeli"
 
 #. is_active
 #. name, stock id
