Updated Lithuanian translation.
2007-08-15  Gintautas Miliauskas  <gintas@akl.lt>

	* lt.po: Updated Lithuanian translation.



svn path=/trunk/; revision=13085

--- a/po/lt.po
+++ b/po/lt.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-08-15 10:14+0300\n"
+"POT-Creation-Date: 2007-08-15 18:03+0300\n"
 "PO-Revision-Date: 2007-08-14 22:16+0300\n"
 "Last-Translator: Žygimantas Beručka <zygis@gnome.org>\n"
 "Language-Team: Lithuanian <gnome-lt@lists.akl.lt>\n"
@@ -109,11 +109,11 @@ msgstr "Taškai"
 
 #: ../data/browser.xml.h:22
 msgid "Drag a color to an object to change it to that color"
-msgstr "Norėdami pakeisti objekto spalvą, nutempkite spalvą ant jo"
+msgstr "Norėdami pakeisti objekto spalvą, nutempkite ant jo spalvą"
 
 #: ../data/browser.xml.h:23
 msgid "Drag a pattern tile to an object to change it"
-msgstr "Norėdami pakeisti objekto raštą, nutempkite raštą ant jo"
+msgstr "Norėdami pakeisti objekto raštą, nutempkite ant jo raštą"
 
 #: ../data/browser.xml.h:24
 msgid "Drag an emblem to an object to add it to the object"
@@ -2484,7 +2484,7 @@ msgstr "Tai yra atjungta saugumo sumetimais."
 #: ../libnautilus-private/nautilus-program-choosing.c:911
 #: ../libnautilus-private/nautilus-program-choosing.c:979
 msgid "Details: "
-msgstr "Detalės:"
+msgstr "Detalės: "
 
 #: ../libnautilus-private/nautilus-program-choosing.c:942
 #: ../libnautilus-private/nautilus-program-choosing.c:953
@@ -3360,22 +3360,22 @@ msgstr "Formatuoti pasirinktą skirsnį"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:7019
 msgid "Mount the volume associated with the open folder"
-msgstr "Prijungti laikmeną susietą su atvertu aplanku"
+msgstr "Prijungti laikmeną, susietą su atvertu aplanku"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:7023
 msgid "Unmount the volume associated with the open folder"
-msgstr "Atjungi laikmeną susietą su atvertu aplanku"
+msgstr "Atjungti laikmeną, susietą su atvertu aplanku"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:7027
 msgid "Eject the volume associated with the open folder"
-msgstr "Išimti laikmeną susietą su atvertu aplanku"
+msgstr "Išimti laikmeną, susietą su atvertu aplanku"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:7031
 msgid "Format the volume associated with the open folder"
-msgstr "Formatuoti laikmeną susietą su atvertu aplanku"
+msgstr "Formatuoti laikmeną, susietą su atvertu aplanku"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:7034
@@ -3964,7 +3964,6 @@ msgid "The file that you dropped is not an image."
 msgstr "Failas, kurį atitempėte, nėra paveikslėlis."
 
 #: ../src/file-manager/fm-properties-window.c:1048
-#, c-format
 msgid "Properties"
 msgstr "Savybės"
 
