--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-15  Gintautas Miliauskas  <gintas@akl.lt>
+
+	* lt.po: Updated Lithuanian translation.
+
 2007-08-15  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
