--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-16  Priit Laes  <plaes@svn.gnome.org>
+
+	* et.po: Estonian translation updates by Ivar Smolin <okul@linux.ee>
+
 2007-08-17  Stéphane Raimbault  <stephane.raimbault@gmail.com>
 
 	* fr.po: Updated French translation.
