--- a/po/et.po
+++ b/po/et.po
@@ -19,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-08-04 06:12+0100\n"
-"PO-Revision-Date: 2007-08-06 11:57+0300\n"
+"POT-Creation-Date: 2007-08-16 11:03+0100\n"
+"PO-Revision-Date: 2007-08-17 09:18+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -694,7 +694,7 @@ msgid "Network servers icon name"
 msgstr "Võrguserverite ikooni nimi"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:68
-msgid "Only show folders in the tree sidebar"
+msgid "Only show folders in the tree side pane"
 msgstr "Külgpaani puuvaates kuvatakse ainult katalooge"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:69
@@ -5259,7 +5259,7 @@ msgstr "_Külgpaan"
 
 #. label, accelerator
 #: ../src/nautilus-navigation-window-menus.c:480
-msgid "Change the visibility of this window's sidebar"
+msgid "Change the visibility of this window's side pane"
 msgstr "Selle akna külgpaani näitamine või peitmine"
 
 #. is_active
